included supervisor comments

--- a/thesis/content/background.tex
+++ b/thesis/content/background.tex
@@ -12,6 +12,11 @@
 \section{Architecture Patterns}
 \subsection{Multi-Layer Architecture}
 \subsection{Multi-Tier Architecture}
+
+\section{Software Project Management}
+\subsection{Waterfall}
+\subsection{Scrum}
+\subsection{Extreme Programming}
 \newpage
 %\subsection{Client-Server}
 %\subsection{Publish-Subscribe}
