--- a/thesis/content/introduction.tex
+++ b/thesis/content/introduction.tex
@@ -1,1 +1,4 @@
 \chapter{Introduction}
+
+TODO Ask the question that will be solved by this thesis
+e.g. "What is the impact of using best practice software architecture patterns over ad-hoc monilithic software development?"
