--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -11,30 +11,34 @@
 %\input{template/declaration_TU_Graz}  %% Statutory Declaration
 %\cleardoublepage
 
-%\tableofcontents
-%\listoffigures
-%\listoftables
-%\input{content/abstract.tex}
-\input{content/timetable.tex}
+\tableofcontents
+
+\input{content/abstract.tex}
+%\input{content/timetable.tex}
 %\input{content/acknowledgements.tex}
 
 \mainmatter
 
 
-%\input{content/introduction.tex}        
-%\input{content/background.tex}
+\input{content/introduction.tex}        
+\input{content/background.tex}
 \input{content/methods.tex}
-%\input{content/result.tex}
-%\input{content/discussion.tex}
-%\input{content/conclusion.tex}
-%\input{content/future_work.tex}
+\input{content/result.tex}
+\input{content/discussion.tex}
+\input{content/conclusion.tex}
+\input{content/future_work.tex}
 
 
 %\cite{Gof94}
 %\cite{Hfd04}
 %\cite{Aspect06}
-%\cite{Composing06}
-%\printbibliography
+\cite{Composing06}
+
+\listoffigures
+\listoftables
+
+\printbibliography
+
 
 \end{document}
 
