--- a/thesis/content/references.bib
+++ b/thesis/content/references.bib
@@ -27,3 +27,21 @@
 	pages		= "109-121",
 	}
 
+@book{Castagna97,
+	author= "Giuseppe Castagna",
+	title = "Object-oriented programming. In: Object-Oriented Programming A Unified Foundation. Progress in Theoretical Computer Science",
+	year = "1997",
+	publisher = "Birkhäuser Boston",
+	doi = {10.1007/978-1-4612-4138-6_3}
+	}
+@article{johnson91,
+author = "Ralph E. Johnson, Brian Foote",
+title = "Designing Reusable Classes",
+year = "1991"
+}
+
+@article{Truyen04,
+author = "Eddy Truyen, Wouter Joosen, Bo Nørregaard Jørgensen, Pierre Verbaeten",
+title = "A Generalization and Solution to the Common Ancestor Dilemma Problem in Delegation-Based Object Systems",
+year = "2004"
+}
