finished chapter on oop-background

--- a/thesis/content/references.bib
+++ b/thesis/content/references.bib
@@ -32,7 +32,7 @@
 	title = "Object-oriented programming. In: Object-Oriented Programming A Unified Foundation. Progress in Theoretical Computer Science",
 	year = "1997",
 	publisher = "Birkhäuser Boston",
-	doi = {10.1007/978-1-4612-4138-6_3}
+	doi = {10.1007/978-1-4612-4138-6}
 	}
 @article{johnson91,
 author = "Ralph E. Johnson, Brian Foote",
@@ -44,4 +44,22 @@ year = "1991"
 author = "Eddy Truyen, Wouter Joosen, Bo Nørregaard Jørgensen, Pierre Verbaeten",
 title = "A Generalization and Solution to the Common Ancestor Dilemma Problem in Delegation-Based Object Systems",
 year = "2004"
+}
+
+@book{robert03,
+	author = {Martin Robert},
+	title = {Agile Software Development, Principles, Patterns, and Practices},
+	date = {2003},
+	isbn = {0135974445},
+}
+@article{srp,
+	author = {D.L. Parnas},
+	title = {On the Criteria To Be Used in Decomposing Systems into Module},
+	date = {1972}
+}
+
+@article{ocp,
+	author = {Bertrand Meyer},
+	title = {Object Oriented Software Construction},
+	date = {1988}
 }
