--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -7,7 +7,7 @@
 \frontmatter
 
 \input{template/colophon}
-\input{\mytitlepage}
+%\input{\mytitlepage}
 %\input{template/declaration_TU_Graz}  %% Statutory Declaration
 %\cleardoublepage
 
