--- a/thesis/content/background.tex
+++ b/thesis/content/background.tex
@@ -4,17 +4,26 @@ This chapter is intended to provide information on some basic principles in term
 
 \section{Fundamentals of Object-Oriented Programming}
 
-The paradigm of Object Oriented Programming (OOP) uses \emph{Classes} as primary mean to gather and structure data. The data within a class is mostly called \emph{attributes}, means to interact with it are called \emph{methods} \citep[80]{Castagna97}. \\
-While a class is the abstract definition of such a container an \emph{object} is a concrete instance filled with actual data. Attributes that may differ between each instance are therefore also called \emph{instance variables}. Variables that belong to the class itself and thus are only instantiated once per class are called \emph{class variables}. A prominent problem often mentioned in this context is the \emph{Diamond Problem} in the sense of multiple inheritance. It describes a situation in which at least two parents of a derived class share a single base class. \cite{Truyen04} If now a method of the topmost class is overridden by both ancestors of lowermost class, the question arises which of the two possible methods should be called. Some languages, such as Java or C#, do not support multiple inheritance for this reason, while others explicitly allow it, such as C++ or Python. In this cases if a situation as described in the Diamond Problem arises the results can cause undefined behaviour.
+The paradigm of Object Oriented Programming (OOP) uses \emph{classes} as primary mean to gather and structure data. The data within a class is mostly called \emph{attributes}, means to interact with it are called \emph{methods} \cite[80]{Castagna97}. \\
+While a class is the abstract definition of such a container an \emph{object} is a concrete instance filled with actual data. Attributes that may differ between each instance are therefore also called \emph{instance variables}. Variables that belong to the class itself and thus are only instantiated once per class are called \emph{class variables}.
 
-\subsection{Polymorphism and Inheritance}
+\subsection{Encapsulation} 
+To encourage refactoring each class should prevent direct access to is internals from the outside. It should however provide a well-defined interface in terms of methods for manipulating the data, as this allows the class to enforce invariants. This means that it hides all information not relevant to others as they are only implementational details. As other classes now rely on an interface rather than concrete implementations the code is called loosley coupled. As modifying the internals does not break interdependencies it encourages programmers to perform refactoring results in improved code quality. Many programming languages provide different access levels varying from visible to all others, accessible only within the class or visible from within and derived classes. The latter access level can be problematic as they effectively break the encapsulation by providing direct access to subclasses. 
 
-Inheritance describes the concept of a child class inheriting all attributes, methods and other properties from a parent class. The child class is therefore a superset of the base class as it can be extended to meet the requirements. This concept is important as it encourages develpers to reuse existing code and in that way lower the risk of programming errors. \cite{johnson91}\\
-Polymorphism is closely tied to Inheritance. It describes the ability of a language to choose between equally-called methods and attributes of a base class and its child class. This means that a derived class can override methods of the base which are then called \emph{virtual}. At runtime it is determined which method should be called \footnote{https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/classes-and-structs/polymorphism, accessed 31.08.2017}.
+\subsection{Inheritance}
+Inheritance describes the concept of a child class inheriting all attributes, methods and other properties from a parent class. The child class is connected with the base class trough a \emph{is-a}-relationship. The child class is therefore a superset of the base class as it can be extended to meet the requirements. This concept is important as it encourages developers to reuse existing code and in that way lower the risk of programming errors \cite{johnson91}. \\
+A prominent problem often mentioned in this context is the \emph{Diamond Problem} in the sense of multiple inheritance. It describes a situation in which at least two parents of a derived class share a single base class \cite{Truyen04}. If now a method of the topmost class is overridden by both ancestors of lowermost class, the question arises which of the two possible methods should be called. Some languages, such as Java or C\#, do not support multiple inheritance for this reason, while others explicitly allow it, such as C++ or Python. In this cases if a situation as described in the Diamond Problem arises the results can cause undefined behaviour.
+
+\subsection{Polymorphism}
+
+Polymorphism describes the ability to tie the same interface to different belonging types. There are two main kinds of polymorphism: The \emph{overriding} polymorphism, which is tied closely to inheritance and describes the ability to choose at runtime between equally-called methods and attributes of a base class and its child class. For example, if a base class \texttt{Animal} has a method \texttt{speak}, each derived class \texttt{Dog} and \texttt{Cat} both inherit this method. With overriding polymorphism if the method is called the two subclasses are able to behave in different ways while providing the same programming interface. It is determined at runtime which method should be executed for an object. \\
+The other important kind is of \emph{overloading} polymorphism which is used to provide methods with the same name but different signatures (and thus attributes). An example could be two methods called \texttt{add}, one taking a number, one taking a text as a parameter. Here it is determined at compile time which method will be used. \footnote{https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/classes-and-structs/polymorphism, accessed 31.08.2017}.
 
 \subsection{Single Responsibility Principle}
+This important principle states that each class should only full-fill one particular purpose and as a result does only have one reason to change. The computer scientist D.L. Parnas wrote that in software development each design decision which is likely to change should be placed in a single, independent module and hides this decision from others \cite{srp}. When followed it avoids side effects on other responsibilities when changing the class. A example of a class violating this concept could be a class that reads two numbers from the user, calculates the sum and prints the result. While this program seems quite simple three different responsibilities are placed in the same class. If either the means to provide the input, for presenting need to be modified or the algorithms should support other data types, the class need to be changed. In a conforming program each of this three actions would be placed in a own module.
 
 \subsection{Open Closed Principle}
+The Open-Closed-Principle states that each class should be open to extension and closed for modification \cite{ocp}. As already written code is assumed to be well tested and working as intended it should be avoided to modify it afterwards to add new functionality. Every change could lead to unwanted side effects that may only occur in very specific situations and are therefore difficult to prevent. Inheritance addresses this problem as it empowers the programmer to add new features while preserving all of the old code. Even when overriding methods in terms of polymorphism the principle is not violated at the original class is preserved as-is. 
 
 \section{Design Patterns}
 \subsection{Unit of Work}
