--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -19,7 +19,6 @@
 
 \mainmatter
 
-
 \input{content/introduction.tex}        
 \input{content/background.tex}
 \input{content/methods.tex}
@@ -33,6 +32,8 @@
 %\cite{Hfd04}
 %\cite{Aspect06}
 \cite{Composing06}
+
+\appendix
 
 \listoffigures
 \listoftables
