--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -1,6 +1,9 @@
 \input{preamble.tex}
 \usepackage{lipsum}
 \usepackage[toc,page]{appendix}
+\usepackage{caption}
+\usepackage{hyperref}
+
 
 \begin{document}
 
