--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -3,6 +3,8 @@
 \usepackage[toc,page]{appendix}
 \usepackage{caption}
 \usepackage{hyperref}
+\usepackage{svg}
+\usepackage{amsmath}
 
 
 \begin{document}
